--- a/tabs/src/components/UserEdit.css
+++ b/tabs/src/components/UserEdit.css
@@ -73,32 +73,30 @@ code {
   flex-direction: row;
 }
 
-.control{
+.control {
   margin: 0.35rem;
 }
 
-.main{
+.main {
   background-color: white;
 }
 
-
-
-.success{
+.success {
   color: green;
   font-weight: bold;
   padding: 0.35rem;
 }
 
-.user-list{
+.user-list {
   width: 100%;
   height: 50%;
 }
 
-.button{
+.button {
   margin: 1rem 0 0 0.5rem;
-  position: 'relative'
+  position: 'relative';
 }
 
-.small-width{
+.small-width {
   width: 25% !important;
 }
