--- a/tabs/src/components/UserList.css
+++ b/tabs/src/components/UserList.css
@@ -7,25 +7,25 @@
   padding: 1rem;
 }
 
-.welcome.page > .narrow > img {
+.welcome.page>.narrow>img {
   margin: 0 auto;
   display: block;
   width: 200px;
 }
 
-.welcome.page > .narrow > ul {
+.welcome.page>.narrow>ul {
   width: 80%;
   justify-content: space-between;
   margin: 4rem auto;
   border-bottom: none;
 }
 
-.welcome.page > .narrow > ul > li {
+.welcome.page>.narrow>ul>li {
   background-color: inherit;
   margin: auto;
 }
 
-.welcome.page > .narrow > ul > li > a {
+.welcome.page>.narrow>ul>li>a {
   font-size: 14px;
   min-height: 32px;
   border-bottom-color: rgb(98, 100, 167);
@@ -35,7 +35,7 @@
   text-align: center;
 }
 
-.sections > * {
+.sections>* {
   margin: 4rem auto;
 }
 
@@ -98,13 +98,25 @@ code {
   height: 90%;
 }
 
+.list-bar {
+  display: flex;
+  flex-direction: row;
+}
+
 .search-bar {
+  width: 50%;
   text-align: right;
-  margin: 0 0.5rem 0.5rem 0;
+  margin: 0 0.5rem 0.5rem 1rem;
+}
+
+.add-bar {
+  width: 50%;
+  text-align: left;
+  margin: 1rem 0.5rem 0.5rem 0;
 }
 
 .search-box {
-  width: 25%;
+  width: 50%;
 }
 
 .MuiDataGrid-row:nth-child(even) {
