--- a/tabs/src/components/UserInvite.scss
+++ b/tabs/src/components/UserInvite.scss
@@ -1,10 +1,8 @@
+@import '../variables.scss';
+
 .narrow {
   max-width: 900px;
   margin: 0 auto;
-}
-
-.page-padding {
-  padding: 1rem;
 }
 
 .welcome.page > .narrow > img {
@@ -68,13 +66,8 @@ code {
   color: red;
 }
 
-.row {
-  display: flex;
-  flex-direction: row;
-}
-
 .control {
-  margin: 0.35rem;
+  padding: 0.35rem;
 }
 
 .main {
@@ -82,9 +75,7 @@ code {
 }
 
 .warning {
-  color: red;
   font-weight: bold;
-  padding: 0.35rem;
 }
 
 .success {
@@ -93,36 +84,34 @@ code {
   padding: 0.35rem;
 }
 
-.user-list {
-  width: 100%;
-  height: 90%;
+.check-button {
+  align-self: center;
+  margin-top: 0.5rem !important;
 }
 
-.list-bar {
-  display: flex;
-  flex-direction: row;
+.note-label {
+  margin: 0.5rem;
+  align-self: center;
 }
 
-.search-bar {
-  width: 50%;
-  text-align: right;
-  margin: 0 0.5rem 0.5rem 1rem;
+.warning {
+  color: red;
+  font-weight: bold;
+  padding: 0.35rem;
 }
 
-.add-bar {
-  width: 50%;
-  text-align: left;
-  margin: 1rem 0.5rem 0.5rem 0;
+.page-size {
+  height: 100%;
 }
 
-.search-box {
-  width: 50%;
+.user-invite {
+  @media (max-width: map-get($breakpoints, md)) {
+    min-width: 500px;
+  }
 }
 
-.MuiDataGrid-columnHeaderTitle {
-  font-weight: bold !important;
-}
-
-.MuiDataGrid-row:nth-child(even) {
-  background-color: aliceblue;
+.invite-input {
+  @media (max-width: map-get($breakpoints, md)) {
+    align-self: center;
+  }
 }
