--- a/tabs/src/components/UserList.scss
+++ b/tabs/src/components/UserList.scss
@@ -1,6 +1,12 @@
+@import '../variables.scss';
+
 .narrow {
   max-width: 900px;
   margin: 0 auto;
+}
+
+.page-padding {
+  padding: 1rem;
 }
 
 .welcome.page > .narrow > img {
@@ -64,37 +70,12 @@ code {
   color: red;
 }
 
-.row {
-  display: flex;
-  flex-direction: row;
-}
-
 .control {
-  padding: 0.35rem;
+  margin: 0.35rem;
 }
 
 .main {
   background-color: white;
-}
-
-.warning {
-  font-weight: bold;
-}
-
-.success {
-  color: green;
-  font-weight: bold;
-  padding: 0.35rem;
-}
-
-.check-button {
-  align-self: center;
-  margin-top: 0.5rem !important;
-}
-
-.note-label {
-  margin: 0.5rem;
-  align-self: center;
 }
 
 .warning {
@@ -103,6 +84,47 @@ code {
   padding: 0.35rem;
 }
 
-.page-size {
-  height: 100%;
+.success {
+  color: green;
+  font-weight: bold;
+  padding: 0.35rem;
+}
+
+.user-list {
+  width: 100%;
+  height: 90%;
+}
+
+.list-bar {
+  display: flex;
+  flex-direction: row;
+}
+
+.search-bar {
+  width: 50%;
+
+  text-align: right;
+  margin: 0 0.5rem 0.5rem 1rem;
+}
+
+.add-bar {
+  width: 50%;
+  text-align: left;
+  margin: 1rem 0.5rem 0.5rem 0;
+}
+
+.search-box {
+  width: 50%;
+
+  @media (max-width: map-get($breakpoints, md)) {
+    width: 80%;
+  }
+}
+
+.MuiDataGrid-columnHeaderTitle {
+  font-weight: bold !important;
+}
+
+.MuiDataGrid-row:nth-child(even) {
+  background-color: aliceblue;
 }
