feat: dependencies upgrade (Refs #282068)

--- a/tabs/src/components/UserInvite.scss
+++ b/tabs/src/components/UserInvite.scss
@@ -1,29 +1,29 @@
-@import '../variables.scss';
+@use '../variables.scss' as vars;
 
 .narrow {
   max-width: 900px;
   margin: 0 auto;
 }
 
-.welcome.page > .narrow > img {
+.welcome.page>.narrow>img {
   margin: 0 auto;
   display: block;
   width: 200px;
 }
 
-.welcome.page > .narrow > ul {
+.welcome.page>.narrow>ul {
   width: 80%;
   justify-content: space-between;
   margin: 4rem auto;
   border-bottom: none;
 }
 
-.welcome.page > .narrow > ul > li {
+.welcome.page>.narrow>ul>li {
   background-color: inherit;
   margin: auto;
 }
 
-.welcome.page > .narrow > ul > li > a {
+.welcome.page>.narrow>ul>li>a {
   font-size: 14px;
   min-height: 32px;
   border-bottom-color: rgb(98, 100, 167);
@@ -33,7 +33,7 @@
   text-align: center;
 }
 
-.sections > * {
+.sections>* {
   margin: 4rem auto;
 }
 
@@ -101,13 +101,13 @@ code {
 }
 
 .user-invite {
-  @media (max-width: map-get($breakpoints, md)) {
+  @media (max-width: map-get(vars.$breakpoints, md)) {
     min-width: 500px;
   }
 }
 
 .invite-input {
-  @media (max-width: map-get($breakpoints, md)) {
+  @media (max-width: map-get(vars.$breakpoints, md)) {
     align-self: center;
   }
 }
