--- a/tabs/src/components/UserEdit.scss
+++ b/tabs/src/components/UserEdit.scss
@@ -1,29 +1,29 @@
-@import '../variables.scss';
+@use '../variables.scss' as vars;
 
 .narrow {
   max-width: 900px;
   margin: 0 auto;
 }
 
-.welcome.page > .narrow > img {
+.welcome.page>.narrow>img {
   margin: 0 auto;
   display: block;
   width: 200px;
 }
 
-.welcome.page > .narrow > ul {
+.welcome.page>.narrow>ul {
   width: 80%;
   justify-content: space-between;
   margin: 4rem auto;
   border-bottom: none;
 }
 
-.welcome.page > .narrow > ul > li {
+.welcome.page>.narrow>ul>li {
   background-color: inherit;
   margin: auto;
 }
 
-.welcome.page > .narrow > ul > li > a {
+.welcome.page>.narrow>ul>li>a {
   font-size: 14px;
   min-height: 32px;
   border-bottom-color: rgb(98, 100, 167);
@@ -33,7 +33,7 @@
   text-align: center;
 }
 
-.sections > * {
+.sections>* {
   margin: 4rem auto;
 }
 
@@ -70,7 +70,7 @@ code {
   display: flex;
   flex-direction: row;
 
-  @media (max-width: map-get($breakpoints, lg)) {
+  @media (max-width: map-get(vars.$breakpoints, lg)) {
     flex-direction: column;
   }
 }
@@ -78,13 +78,13 @@ code {
 .control {
   margin: 0.35rem;
 
-  @media (max-width: map-get($breakpoints, lg)) {
+  @media (max-width: map-get(vars.$breakpoints, lg)) {
     width: 100% !important;
   }
 }
 
 .edit-user {
-  @media (max-width: map-get($breakpoints, lg)) {
+  @media (max-width: map-get(vars.$breakpoints, lg)) {
     width: 95%;
   }
 }
@@ -107,13 +107,13 @@ code {
 .small-width {
   width: 25% !important;
 
-  @media (max-width: map-get($breakpoints, lg)) {
+  @media (max-width: map-get(vars.$breakpoints, lg)) {
     width: 100% !important;
   }
 
   min-width: 150px !important;
 
-  @media (max-width: map-get($breakpoints, lg)) {
+  @media (max-width: map-get(vars.$breakpoints, lg)) {
     min-width: 0px !important;
   }
 }
